# tide

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  install.sh  pyproject.toml
.claude/: settings.json
docs/: index.html  routines.md  session-ops.md
examples/dogfood-runA/: index.html
examples/dogfood-runB/: index.html
examples/tide-pool/: SHOWCASE.md  index.html
packaging/: tide.rb
prompts/: orchestrator.md  user-playbook.md  worker.md
rules/: canon-sync.md  subagents.md
skills/offload/: SKILL.md
skills/tide-flow/: SKILL.md
skills/tide-routines/: SKILL.md
src/tide/: __init__.py  adopt.py  api.py  cli.py  doctor.py  fields.py  gate.py  handoff_queue.py  harness.py  health.py  init_home.py  io.py  ledger.py  lookback.py  mcp.py  migrate.py  offload.py  paths.py  placeholders.py  readme.py  registry.py  resolve.py  roster.py  sessions.py  skills_install.py  slug.py  strictness.py  sync.py  verify.py
src/tide/adapters/: __init__.py  base.py  orca.py  orca_worktree.py  terminal_app.py  tmux.py
src/tide/arc/: board.py  candidate.py  curate.py  gc.py  land.py  plan.py  plan_surface_template.html  plan_template.html  stream.py  templates.py  work.py  worktree.py
src/tide/cannon/: commands.py  merge.py  reality.py  store.py
src/tide/canon/: __init__.py  board.py  commands.py  merge.py  migrate.py  reality.py  rev.py  store.py
src/tide/contract/: ask.py  lifecycle.py  model.py
src/tide/hooks/: __init__.py  edit_gate.py  install.py  role_gate.py  session_end.py  session_start.py
src/tide/launcher/: __init__.py  context.py  go.py  handoff.py  launch.py  menu.py  pickup.py  (+4 more)
tests/: conftest.py  test_adapters.py  test_adopt.py  test_arc_board.py  test_arc_candidate.py  test_arc_cli.py  test_arc_curate.py  test_arc_gates.py  test_arc_land.py  test_arc_plan.py  test_arc_prism.py  test_arc_routine.py  test_arc_stream.py  test_arc_thread.py  test_arc_worktree.py  test_board_cli.py  test_candidate_cli.py  test_cannon_cli.py  test_cannon_merge.py  test_canon_backcompat.py  test_canon_board.py  test_canon_cli.py  test_canon_merge.py  test_canon_migrate.py  test_canon_rev.py  test_canon_store.py  test_contract_cli.py  test_contract_lifecycle.py  test_contract_model.py  test_dissolution.py  test_distribution_smoke.py  test_doctor.py  test_doctor_cli.py  test_dogfood.py  test_durability.py  test_e2e_loop.py  test_fields.py  test_gate.py  test_handoff.py  test_handoff_queue.py  (+42 more)
(+76 files in other folders)
