[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tide"
version = "0.1.0"
description = "tide — simplified, synchronous, human-driven orchestration machine (pure CLI + markdown, no autonomy)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "tide contributors" }]
keywords = ["orchestration", "cli", "arcs", "cannon", "contracts"]

# Runtime: STDLIB ONLY. No web deps, no click — argparse is the CLI surface.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
tide = "tide.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# src-layout: make `import tide` work without an editable install (pytest >=7).
pythonpath = ["src"]
